--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-query": "^5.90.12",
     "axios": "^1.13.2",
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1",
-    "socket.io-client": "^4.8.1"
+    "react-hook-form": "^7.68.0",
+    "socket.io-client": "^4.8.1",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
