Fix :final fix try

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/api/:path*",
-      "destination": "https://collaborative-task-manager-backend-kgx6.onrender.com/*"
+      "source": "/api/proxy/:path*",
+      "destination": "https://collaborative-task-manager-backend-kgx6.onrender.com/api/:path*"
     }
   ]
 }
